a few style edits, still have major issues with the burger menu and overlapping content, going to need to add a million different media queries it looks like

--- a/components/jsx-components/Burger/Burger.module.scss
+++ b/components/jsx-components/Burger/Burger.module.scss
@@ -4,7 +4,7 @@
 //  takes in a color which is used as the hover color
 @mixin baseBurgerStyle($color) {
     position: absolute;
-    top: 3%;
+    top: 5%;
     left: 1.2rem;
     display: flex;
     flex-direction: column;
